<resources>
    <string name="app_name">MoviesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="trending_movies">Trending movies</string>
    <string name="view_all"><![CDATA[view all >]]></string>
    <string name="_10">/10</string>
    <string name="review">review</string>
    <string name="vote">vote</string>
    <string name="title">title</string>
    <string name="year">year</string>
</resources>