<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/moviePicture"
            android:layout_width="104dp"
            android:layout_height="121dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="52dp"
            android:layout_weight="1"
            android:fontFamily="@font/lato_black"
            android:text="@string/title"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/moviePicture"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/year_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/year"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/moviePicture"
            app:layout_constraintTop_toBottomOf="@+id/title_textView" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="33dp"
            android:layout_height="29dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="76dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_yellow_star" />

        <TextView
            android:id="@+id/voteAverage_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/vote"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/review_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/review"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/voteAverage_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>