<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".homescreen.HomeScreenFragment" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_app_logo_small"
            app:layout_constraintBottom_toTopOf="@+id/searchEt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".65"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintVertical_bias="1.0"/>

        <com.neusoft.moviesapp.utils.InstantAutoComplete
            android:id="@+id/searchEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/black"
            android:drawableEnd="@drawable/ic_search"
            android:fontFamily="@font/lato_bold"
            android:imeOptions="actionSearch"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.875"
            tools:hint="Find the movie" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/lato_heavy"
            android:text="@string/trending_movies"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/view_all"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/lato_latin_heavy"
            android:text="@string/view_all"
            android:textColor="#A8A8A8"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>