<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/navy"
        tools:context=".detailscreen.DetailScreenFragment">


        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/guideline"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".40"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/guideline2"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".20"/>

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline2"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:fontFamily="@font/lato_latin_bold"
            android:text="@string/todo"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/year"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:fontFamily="@font/lato_black"
            android:text="@string/year"
            android:textColor="#C6B9B9"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline">

            <TextView
                android:id="@+id/description_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/todo"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.04"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="33dp"
                android:layout_height="29dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="76dp"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_yellow_star" />

            <TextView
                android:id="@+id/voteAverage_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/lato_black"
                android:text="@string/vote"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lato_light"
                android:text="@string/_10"
                app:layout_constraintStart_toEndOf="@+id/voteAverage_textView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/review_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/lato_light"
                android:text="@string/review"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/voteAverage_textView" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="362dp"
                android:layout_height="23dp"
                android:contentDescription="@string/todo"
                android:scaleX="1000"
                android:scaleY="0.025"
                android:src="@android:drawable/bottom_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/review_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="51dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
            app:layout_constraintStart_toStartOf="@+id/movie_poster" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="62dp"
            android:layout_height="61dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_app_logo_small"
            app:layout_constraintBottom_toTopOf="@+id/movieName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.277" />

        <ImageView
            android:id="@+id/back_imageView"
            android:layout_width="27dp"
            android:layout_height="23dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>